Version 0.9.46/CVS+dev (?? ??? 2004)
  - Fix bug: "Import" and "Export" in import.php were not being translated.
  - Fix bug: view_entry.php would not display links to edit/delete under
    some circumstances.
  - Updated upgrading docs so they're xhtml valid
  - Updated admin & user docs to reflect new content, correct minor typos, and
  minor clarification of phrasing/language.
  - Making edit_entry.php valid xhtml & slightly easier to read
  - Fixed bug 1102167: custom header when non-admin user
  - When html is allowed in event description, still replace newline with
    html break in view page and event popup if the user did not use any html.
  - Update do_redirect to use meta-refresh work-around for WN web server.
  - Pointing 'account' option for non-admin users to edit_users.php &
    making indentation of css & php code easier to read by using tabs
  - Making the trailer not be displayed in edit_user.php (since it's always
    in an iframe now)
  - Fixing users.php so it only shows a single user's info when the user
    isn't an admin
  - Fixing export.php JS so '&amp;' only reads '&'
  - Added 'unapproved' class & removed gradient code from styles.php for
    empty cells so they blend in with the background of the page
  - Added 'unapproved' class for customizing listing of unapproved events in
    list_unapproved.php
  - Fixing strange nested form tags & adding labels for form fields in
    import.php
  - Fixed Bug 824268: emails sent by edit_entry_handler.php in wrong time zone
  - Fixed Bug 1066440: End Time increased by timezone offset
  - Fixed Bug 1085337: Categories combo-box in month.php in assistant mode
  - Modified validate.php and trailer.php to look for new $user_inc 
    user-app-*.php files to allow webcalendar to work with other 
    applications' authentication and user tables.
  - Added user-app-postnuke.php which allows webcalendar to use postnuke's
    authentication and user tables.  
  - Fixed Bug 1087604: Vanishing Layers / cookies