@@ -217,6 +217,7 @@ h2 {
 		<li>Oracle 8</li>
 		<li>PostgreSQL</li>
 		<li>Interbase</li>
+		<li>MS SQL Server</li>
 		<li>ODBC (PHP ODBC includes support for Adabas D, IBM DB2, Solid and Sybase SQL Anywhere as well as ODBC)</li>
 	</ul>
 	<p>For the database you choose, you must have its drivers built into
