@@ -1,4 +1,5 @@
 Version 0.9.46/CVS+dev (?? ??? 2004)
+  - Added patch 1102478: Add mssql support to php-dbi.php
   - Fix bug: "Import" and "Export" in import.php were not being translated.
   - Fix bug: view_entry.php would not display links to edit/delete under
     some circumstances.
